--- a/urls/templates/thanks.html
+++ b/urls/templates/thanks.html
@@ -6,6 +6,11 @@
 <h1>Thanks!</h1>
 <p>Your data is valid, and your link has been shortened for you.
 <br>
-<input id="clipfield" value="localhost:8000/{{ url.short }}"> {% clippy "clipfield" %}
+<input id="clipfield" value="{{ url.get_absolute_url }}"> {% clippy "clipfield" %}
+
+<br>
+<a href="{{ url.get_absolute_url }}">Test: {{ url.get_absolute_url }}</a>
 </p>
+
+
 {% endblock body %}
